# OpenGL_Project

./: CMakeLists.txt  README.md
header/: Bmp.h  edition.h  geometry3.h  variable.h
resource/: prt0001.stl
shaders/: light.frag.glsl  light.vert.glsl
src/: Bmp.cpp  back-main.cpp  glad.c  main.cpp  shaders.cpp
